fix broken spacing when using payments tabs with saved cards

--- a/checkout-ui-custom/src/_scss/_components/_payment.scss
+++ b/checkout-ui-custom/src/_scss/_components/_payment.scss
@@ -210,6 +210,7 @@
 		}
 
 		#iframe-placeholder-creditCardPaymentGroup {
+			padding-top: 32px;
 			> .payment-group-item-cards {
 				display: block;
 				overflow: hidden;
@@ -428,6 +429,10 @@
 			&:hover {
 				border-color:$actionPrimary;
 				box-shadow:0 0 6px #ddd;
+			}
+
+			#iframe-placeholder-creditCardPaymentGroup {
+				padding-top: 0;
 			}
 
 			.payment-group-item {
